<resources>
    <string name="app_name">UserApp</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="facebook">Register with Facebook</string>
    <string name="have_account">Already have an account?</string>
    <string name="movetosignin">Already have an account?Sign In</string>
    <string name="login_text">LOGIN</string>
    <string name="movetosignup">Do not have an account?</string>
    <string name="for_password">Forgot Password?</string>
    <string name="login_facebook">LOGIN WITH FACEBOOK</string>
    <string name="reset_password">Continue</string>
    <string name="smstext">A text message with verification code has been sent to</string>
    <string name="enter_code_here">Enter the code here:</string>
    <string name="verify_button">Verify</string>
    <string name="messageverify">The text message did not arrive?</string>
    <string name="resend_button">Resend</string>
    <string name="title_activity_dash_board">Book Service</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="edit_profile_save">SAVE</string>
    <string name="change_password_confirm">CONFIRM PASSWORD</string>
    <string name="visit_profile_fname">First Name</string>
    <string name="visit_profile_lname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="fragment_first">Select the Services</string>
    <string name="auto_message">search</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN"></string>
    <string name="facebook_application_id" translatable="false"></string>
    <string-array name="painter_category">
        <item>Interior Painter</item>
        <item>Exterior Painter</item>
    </string-array>
</resources>
