<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sample.usertribe.Activities.LoginActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/my_toolbar1">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="100dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme"
                android:layout_marginLeft="24dp"
                >
                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="15dp"
                >

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/login_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#8B0000"
                android:text="@string/login_text"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:layout_marginRight="24dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="15dp"
                >
                <View
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="1dp"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorPrimary"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/or"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textAlignment="center" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
            <Button
                android:id="@+id/login_fb"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/fb_button"
                android:drawableLeft="@drawable/fb"
                android:text="@string/login_facebook"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fog_password"
                android:text="@string/for_password"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                style="@style/AppTheme"
                />
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/moveto_signup"-->
                <!--android:text="@string/movetosignup"-->
                <!--android:textAppearance="?android:textAppearanceMedium"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:onClick="Signup"-->
                <!--android:layout_marginTop="10dp"/>-->
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
